# django-practice

./: README.md  pyproject.toml
config/: settings.py
users/: tests.py
